# UnrealEngine5-mcp

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
ExampleProject/: ExampleProject.uproject
ExampleProject/Config/: DefaultEngine.ini  DefaultGame.ini
ExampleProject/Plugins/UnrealEngineMCP/: UnrealEngineMCP.uplugin
ExampleProject/Plugins/UnrealEngineMCP/Binaries/Win64/: UnrealEditor.modules
ExampleProject/Plugins/UnrealEngineMCP/Source/UnrealEngineMCP/: UnrealEngineMCP.Build.cs
ExampleProject/Plugins/UnrealEngineMCP/Source/UnrealEngineMCP/Private/: UnrealEngineMCP.cpp  UnrealEngineMCPBridge.cpp
ExampleProject/Plugins/UnrealEngineMCP/Source/UnrealEngineMCP/Public/: UnrealEngineMCPRunnable.h
ExampleProject/Source/: ExampleProject.Target.cs  ExampleProjectEditor.Target.cs
ExampleProject/Source/ExampleProject/: ExampleProject.Build.cs
MCP_Server/: __init__.py
MCP_Server/Rag_System/: __init__.py  ast_parser.py  bm25_retriever.py
MCP_Server/Unreal_Client/: __init__.py  socket_client.py
MCP_Server/helpers/: __init__.py  actor_name_manager.py
MCP_Server/tools/: __init__.py  blueprint_tool.py  editor_tool.py  pcg_tool.py  rag_tool.py
MCP_Server/utils/: __init__.py  logger.py  validators.py
Plugins/UnrealEngineMCP/Source/UnrealEngineMCP/Private/: UnrealEngineMCPBridge.cpp  UnrealEngineMCPRunnable.cpp
Plugins/UnrealEngineMCP/Source/UnrealEngineMCP/Private/Commands/: BlueprintCommands.cpp  CommonUtils.cpp
Plugins/UnrealEngineMCP/Source/UnrealEngineMCP/Public/: UnrealEngineMCP.h  UnrealEngineMCPBridge.h
(+12 files in other folders)
